--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,10 @@
 *{
     padding: 0;
     margin: 0;
-    background-color: antiquewhite;
+    background-color: black;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 32px;
 }
 
 body{
@@ -23,11 +26,36 @@ button{
     height: 50px;
     width: 150px;
     border-radius: 10px;
-    background-color: lightgray;
+    background-color: white;
+    color: black;
 }
 button:hover{
     background-color: rgb(233, 233, 233);
 }
 button:active{
     background-color: rgb(247, 247, 247);
+}
+
+.game__section{
+    display: flex;
+    canvas{
+        margin-right: 5%;
+        margin-left: 5%;
+    }
+    .game__hold{
+        border-radius: 10px;
+        height: 140px;
+        width: 300px;
+        background-color: lightgray;
+    }
+
+    .game__highscores{
+    
+        border-radius: 10px;
+        height: 1000px;
+        width: 50%;
+        background-color: lightgray;
+
+        
+    }
 }
