Fixed bug of setinterval not changing when level changes, adjusted it's increments as well

--- a/src/styles.css
+++ b/src/styles.css
@@ -39,15 +39,24 @@ button:active {
 }
 
 .game__section {
-  display: flex;
+  width: 60%;
+  height: 80vh;
+  display: grid;
+  grid-template-columns: 20% 50% 30%;
+  grid-template-rows: 80% 20%;
 }
 .game__section canvas {
+  width: 100%;
   border: 2px white solid;
+  grid-column-start: 2;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
 }
 .game__section .game__hold {
   height: 150px;
   border-bottom-left-radius: 35px;
-  width: 300px;
+  width: 100%;
   background-color: black;
   border: 2px white solid;
 }
@@ -59,7 +68,7 @@ button:active {
 .game__section .game__highscores {
   border-bottom-right-radius: 75px;
   height: 500px;
-  width: 50%;
+  width: 100%;
   background-color: black;
   border: 2px white solid;
 }
