--- a/src/styles.scss
+++ b/src/styles.scss
@@ -37,14 +37,23 @@ button:active{
 }
 
 .game__section{
-    display: flex;
+    width: 60%;
+    height: 80vh;
+    display: grid;
+    grid-template-columns: 20% 50% 30%;
+    grid-template-rows: 80% 20%;
     canvas{
+        width: 100%;
         border: 2px white solid;
+        grid-column-start:2;
+        grid-column-end: 2;
+        grid-row-start: 1;
+        grid-row-end: 2;
     }
     .game__hold{
         height: 150px;
         border-bottom-left-radius: 35px;
-        width: 300px;
+        width: 100%;
         background-color: black;
         border: 2px white solid;
         
@@ -60,7 +69,7 @@ button:active{
     
         border-bottom-right-radius: 75px;
         height: 500px;
-        width: 50%;
+        width: 100%;
         background-color: black;
         border: 2px white solid;
         h1{
