--- a/src/styles.scss
+++ b/src/styles.scss
@@ -75,6 +75,7 @@ button:active{
 
     .game__highscores{
         display: none;
+        overflow: hidden;
         border-bottom-right-radius: 75px;
         min-height: 500px;
         min-width: 100%;
@@ -84,6 +85,10 @@ button:active{
             background-color: white;
             color: black;
             text-align: left;
+        }
+
+        p{
+            background-color: black;
         }
     }
 
